<resources>
    <string name="app_name">Assignment2</string>
    <string name="company_name">The Foodquisition</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="grains">Grain/Cereal Foods</string>
    <string name="dairy">Dairy</string>
    <string name="meat">Meats</string>
    <string name="checkout">Checkout</string>
    <string name="proceedToOrder">Review Order</string>
    <string name="food_items">Food Items</string>
    <string name="cost">Cost</string>
    <string name="cart">Cart</string>
    <string name="payment_opts">Proceed to Payment</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_desc">As it appears on your credit/debit card</string>
    <string name="billing_info">Billing Information</string>
    <string name="clear">Clear</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_cart_confirmation">Are you sure you wish to clear your cart?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="enter_address_placeholder">2 Mary Street</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card">Card</string>
    <string name="expiry">Expiry</string>
    <string name="cvc">CVC</string>
    <string name="card_number">Card Number</string>
    <string name="enter_email_placeholder">johnsmith@mail.com</string>
    <string name="name_placeholder">John Smith</string>
</resources>
